==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/renesas/src/adc/implementation_3/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_bit_control.h"
#include "hal_ll_gpio.h"
#include "hal_ll_adc_pin_map.h"
#include "hal_ll_mstpcr.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_struct(_handle) ((hal_ll_adc_base_handle_t *)_handle)
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_module_num(_module_num)      (_module_num - 1)
#define ADC_REG(base, offset)  (*(volatile uint32_t *)((base) + (offset)))
#define HAL_LL_ADC_ADCLKENR_REG_OFFSET     (0x000UL)
#define HAL_LL_ADC_ADCLKSR_REG_OFFSET      (0x004UL)
#define HAL_LL_ADC_ADCLKCR_REG_OFFSET      (0x004UL)
#define HAL_LL_ADC_ADMDR_REG_OFFSET        (0x040ul)
#define HAL_LL_ADC_ADSGER_REG_OFFSET       (0x048ul)
#define HAL_LL_ADC_ADSGCR0_REG_OFFSET      (0x04Cul)
#define HAL_LL_ADC_ADCHCR_BASE_REG_OFFSET  (0x600ul)
#define HAL_LL_ADC_ADSSTR0_REG_OFFSET      (0x240ul)
#define HAL_LL_ADC_ADCNVSTR_REG_OFFSET     (0x260ul)
#define HAL_LL_ADC_ADSTR_BASE_REG_OFFSET   (0xC20ul)
#define HAL_LL_ADC_ADSCANENDSR_REG_OFFSET  (0xD50ul)
#define HAL_LL_ADC_ADSCANENDSCR_REG_OFFSET (0xD54ul)
#define HAL_LL_ADC_ADCLKENR_CLKEN       (0)

hal_ll_err_t hal_ll_adc_register_handle(hal_ll_pin_name_t pin,
                                        hal_ll_adc_voltage_reference_t vref_input,
                                        hal_ll_adc_resolution_t resolution,
                                        hal_ll_adc_handle_register_t *handle_map,
                                        uint8_t *hal_module_id ) {
    uint16_t pin_check_result;
    hal_ll_adc_pin_id index = { HAL_LL_PIN_NC };

    if (( pin_check_result = hal_ll_adc_check_pins( pin, &index, handle_map )) == HAL_LL_PIN_NC ) {
        return HAL_LL_ADC_WRONG_PIN;
    }

    switch ( resolution ) {
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_ADC_12BIT_RES_VAL;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    switch ( vref_input ) {
        case HAL_LL_ADC_VREF_EXTERNAL:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_EXTERNAL;
            break;
        case HAL_LL_ADC_VREF_INTERNAL:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_INTERNAL;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    if ( hal_ll_adc_hw_specifics_map[ pin_check_result ].pin != pin ) {
        hal_ll_adc_map_pin( pin_check_result, &index );
        handle_map[ pin_check_result ].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_adc_handle =
            ( handle_t* )&hal_ll_adc_hw_specifics_map[ pin_check_result ].base;
    handle_map[ pin_check_result ].hal_ll_adc_handle =
            ( handle_t* )&hal_ll_module_state[ pin_check_result ].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf ) {
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_adc_get_module_state_address );
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_base_handle_t *base = ( hal_ll_adc_base_handle_t * )hal_ll_adc_hw_specifics_map_local->base;

    if( NULL == low_level_handle->hal_ll_adc_handle ) {
        return HAL_LL_MODULE_ERROR;
    }

    set_reg_bit( &base->adm0, HAL_LL_ADC_ADM0_ADCE_POS ); // ADC enable bit
    set_reg_bit( &base->adm0, HAL_LL_ADC_ADM0_ADCS_POS ); // Conversion start bit

    // TODO: look into the setting of these registers
    if( HAL_LL_ADC_RESOLUTION_8_BIT == hal_ll_adc_hw_specifics_map_local->resolution ) {
        *readDatabuf = ( uint8_t )( base->adcr[ 0 ] >> 8 ) & 0xFF;
    } else {
        *readDatabuf = ( uint16_t )base->adcr[ 0 ] & 0xFFF;
    }

    return HAL_LL_ADC_SUCCESS;
}

static hal_ll_pin_name_t hal_ll_adc_check_pins( hal_ll_pin_name_t pin,
                                                hal_ll_adc_pin_id *index,
                                                hal_ll_adc_handle_register_t *handle_map ) {
    static const uint16_t adc_map_size =
        ( sizeof( hal_ll_analog_in_register_list ) / sizeof( hal_ll_pin_channel_list_t ) );
    uint16_t pin_index = 0;
    uint8_t  index_counter = 0;
    uint8_t  hal_ll_module_id = 0;

    if ( HAL_LL_PIN_NC == pin ) {
        return HAL_LL_PIN_NC;
    }

    for ( pin_index = 0; pin_index < adc_map_size; pin_index++ )
    {
        if ( pin == hal_ll_analog_in_register_list[pin_index].pin )
        {
            // Get module number
            hal_ll_module_id = hal_ll_analog_in_register_list[pin_index].module_index;
            // Map pin name
            index->pin_an[hal_ll_module_id] = pin_index;

            // Check if module is taken
            if ( NULL == handle_map[ hal_ll_module_id ].hal_drv_adc_handle ) {
                return hal_ll_module_id;
            } else if ( ADC_MODULE_COUNT == ++index_counter ) {
                return --index_counter;
            }
        }
    }

    if ( index_counter ) {
        return hal_ll_module_id;
    } else {
        return HAL_LL_PIN_NC;
    }
}

static void hal_ll_adc_hw_init( hal_ll_adc_hw_specifics_map_t *map ) {
    hal_ll_adc_base_handle_t *base = ( hal_ll_adc_base_handle_t* )hal_ll_adc_get_base_struct( map->base );

    // Supply ADCLK
    set_reg_bit( &ADC_REG( map->base, HAL_LL_ADC_ADCLKENR_REG_OFFSET ), HAL_LL_ADC_ADCLKENR_CLKEN );
    // ADCLK is in supply
    set_reg_bit( &ADC_REG( map->base, HAL_LL_ADC_ADCLKSR_REG_OFFSET ), HAL_LL_ADC_ADCLKSR_CLKSR );

    // ADCLK clock source select - ADCCLK // TODO - should it be PCLKA?
    clear_reg_bits( &ADC_REG( map->base, HAL_LL_ADC_ADCLKCR_REG_OFFSET ), HAL_LL_ADC_ADCLKCR_CLKSEL_MASK );
    // Clock division ratio - 1/1
    clear_reg_bits( &ADC_REG( map->base, HAL_LL_ADC_ADCLKCR_REG_OFFSET ), HAL_LL_ADC_ADCLKCR_DIVR_MASK );
}
